avances estructural del portafolio

--- a/src/components/partials/Header/Header.css
+++ b/src/components/partials/Header/Header.css
@@ -25,3 +25,17 @@ header {
     transform: scale(1.05);
     color: var(--color-secondary);
 }
+.Mobile{
+    display: none;
+}
+
+@media (max-width:768px) {
+    .PC{
+        display: none;
+    }
+
+    .Mobile{
+        display: block;
+        
+    }
+}
