--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,7 +70,7 @@ body {
 /* Main debe crecer si hay espacio */
 .main-content {
     flex: 1 0 auto;
-    padding-top: var(--spacing-large);
+    /* padding-top: var(--spacing-large); */
     /* opcional, para separarlo del header */
 }
 
