--- a/src/components/views/home/subcomponents/CategoryFilters.css
+++ b/src/components/views/home/subcomponents/CategoryFilters.css
@@ -4,13 +4,16 @@
   padding: 0 1rem;
   gap: 0.5rem;
   scroll-behavior: smooth;
+  padding-bottom: 0.5rem;
+
 }
 
 .category-scroll-container::-webkit-scrollbar {
   height: 3px;
+  background-color: var(--color-celeste);
 }
 
 .category-scroll-container::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--color-primary);
   border-radius: 4px;
 }
